Fix strange colors on mobile screens

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,96 +5,96 @@
   --font-display: "Clash Display", ui-sans-serif, system-ui, sans-serif;
   --font-sans: "Mulish", ui-sans-serif, system-ui, sans-serif;
 
-  --color-sky: #4e99d2;
-  --color-sky-50: #e0ebf7;
-  --color-sky-100: #d1e1f3;
-  --color-sky-200: #b4cfeb;
-  --color-sky-300: #95bde2;
-  --color-sky-400: #74abda;
-  --color-sky-500: #4e99d2;
-  --color-sky-600: #427ca9;
-  --color-sky-700: #365f81;
-  --color-sky-800: #2a455b;
-  --color-sky-900: #1d2b38;
-  --color-sky-950: #172028;
+  --color-sky: oklch(0.659 0.113 243.72);
+  --color-sky-50: oklch(0.935 0.020 250.39);
+  --color-sky-100: oklch(0.903 0.030 251.29);
+  --color-sky-200: oklch(0.844 0.049 249.36);
+  --color-sky-300: oklch(0.782 0.068 246.70);
+  --color-sky-400: oklch(0.721 0.090 245.28);
+  --color-sky-500: oklch(0.659 0.113 243.72);
+  --color-sky-600: oklch(0.567 0.093 243.92);
+  --color-sky-700: oklch(0.471 0.072 245.19);
+  --color-sky-800: oklch(0.379 0.050 244.25);
+  --color-sky-900: oklch(0.283 0.031 247.10);
+  --color-sky-950: oklch(0.239 0.020 245.61);
 
-  --color-midnight: #231f46;
-  --color-midnight-50: #d2cfd9;
-  --color-midnight-100: #bdbac8;
-  --color-midnight-200: #948fa6;
-  --color-midnight-300: #6d6784;
-  --color-midnight-400: #474165;
-  --color-midnight-500: #231f46;
-  --color-midnight-600: #1e1b3a;
-  --color-midnight-700: #1a172e;
-  --color-midnight-800: #151223;
-  --color-midnight-900: #100c19;
-  --color-midnight-950: #0b0813;
+  --color-midnight: oklch(0.267 0.071 285.22);
+  --color-midnight-50: oklch(0.860 0.014 299.76);
+  --color-midnight-100: oklch(0.796 0.020 295.77);
+  --color-midnight-200: oklch(0.662 0.034 295.42);
+  --color-midnight-300: oklch(0.530 0.045 294.28);
+  --color-midnight-400: oklch(0.397 0.060 291.04);
+  --color-midnight-500: oklch(0.267 0.071 285.22);
+  --color-midnight-600: oklch(0.243 0.058 285.68);
+  --color-midnight-700: oklch(0.221 0.044 288.21);
+  --color-midnight-800: oklch(0.195 0.034 291.02);
+  --color-midnight-900: oklch(0.167 0.027 297.51);
+  --color-midnight-950: oklch(0.145 0.024 296.20);
 
-  --color-plum: #6b0f53;
-  --color-plum-50: #e4d1dc;
-  --color-plum-100: #d7bbcc;
-  --color-plum-200: #bd91ac;
-  --color-plum-300: #a2688d;
-  --color-plum-400: #873f70;
-  --color-plum-500: #6b0f53;
-  --color-plum-600: #581244;
-  --color-plum-700: #451236;
-  --color-plum-800: #331128;
-  --color-plum-900: #220e1b;
-  --color-plum-950: #1b0a15;
+  --color-plum: oklch(0.364 0.142 341.53);
+  --color-plum-50: oklch(0.879 0.026 341.89);
+  --color-plum-100: oklch(0.821 0.039 340.94);
+  --color-plum-200: oklch(0.706 0.064 341.52);
+  --color-plum-300: oklch(0.591 0.089 341.50);
+  --color-plum-400: oklch(0.477 0.116 341.12);
+  --color-plum-500: oklch(0.364 0.142 341.53);
+  --color-plum-600: oklch(0.324 0.116 341.90);
+  --color-plum-700: oklch(0.282 0.091 341.41);
+  --color-plum-800: oklch(0.241 0.064 341.79);
+  --color-plum-900: oklch(0.199 0.040 341.86);
+  --color-plum-950: oklch(0.176 0.035 341.98);
 
-  --color-magenta: #e849be;
-  --color-magenta-50: #fee0f3;
-  --color-magenta-100: #fdd1ed;
-  --color-magenta-200: #fab2e1;
-  --color-magenta-300: #f593d5;
-  --color-magenta-400: #ef71ca;
-  --color-magenta-500: #e849be;
-  --color-magenta-600: #ba3e99;
-  --color-magenta-700: #8f3475;
-  --color-magenta-800: #652853;
-  --color-magenta-900: #3e1c34;
-  --color-magenta-950: #2c1625;
+  --color-magenta: oklch(0.665 0.228 340.24);
+  --color-magenta-50: oklch(0.937 0.041 339.63);
+  --color-magenta-100: oklch(0.906 0.061 339.96);
+  --color-magenta-200: oklch(0.845 0.102 340.21);
+  --color-magenta-300: oklch(0.785 0.142 340.31);
+  --color-magenta-400: oklch(0.725 0.185 340.02);
+  --color-magenta-500: oklch(0.665 0.228 340.24);
+  --color-magenta-600: oklch(0.570 0.187 340.03);
+  --color-magenta-700: oklch(0.477 0.145 340.55);
+  --color-magenta-800: oklch(0.380 0.104 340.45);
+  --color-magenta-900: oklch(0.284 0.064 339.49);
+  --color-magenta-950: oklch(0.237 0.043 339.92);
 
-  --color-sand: #ebe6dd;
-  --color-sand-50: #fbfaf8;
-  --color-sand-100: #f9f8f5;
-  --color-sand-200: #f6f3ef;
-  --color-sand-300: #f2efe9;
-  --color-sand-400: #efeae3;
-  --color-sand-500: #ebe6dd;
-  --color-sand-600: #bcb8b1;
-  --color-sand-700: #8f8c87;
-  --color-sand-800: #656360;
-  --color-sand-900: #3e3d3b;
-  --color-sand-950: #2b2b29;
+  --color-sand: oklch(0.926 0.013 82.40);
+  --color-sand-50: oklch(0.985 0.003 84.57);
+  --color-sand-100: oklch(0.979 0.004 91.45);
+  --color-sand-200: oklch(0.965 0.006 75.41);
+  --color-sand-300: oklch(0.953 0.009 84.58);
+  --color-sand-400: oklch(0.939 0.011 76.60);
+  --color-sand-500: oklch(0.926 0.013 82.40);
+  --color-sand-600: oklch(0.784 0.011 81.79);
+  --color-sand-700: oklch(0.641 0.008 80.71);
+  --color-sand-800: oklch(0.501 0.005 78.28);
+  --color-sand-900: oklch(0.360 0.004 84.58);
+  --color-sand-950: oklch(0.288 0.004 106.62);
 
-  --color-lime: #c2e800;
-  --color-lime-50: #f6fbd9;
-  --color-lime-100: #f2f9c7;
-  --color-lime-200: #e8f5a2;
-  --color-lime-300: #dcf07c;
-  --color-lime-400: #d0ec51;
-  --color-lime-500: #c2e800;
-  --color-lime-600: #9cba14;
-  --color-lime-700: #788e19;
-  --color-lime-800: #566418;
-  --color-lime-900: #363d14;
-  --color-lime-950: #272b11;
+  --color-lime: oklch(0.872 0.209 120.90);
+  --color-lime-50: oklch(0.976 0.045 114.02);
+  --color-lime-100: oklch(0.964 0.065 114.11);
+  --color-lime-200: oklch(0.942 0.106 115.73);
+  --color-lime-300: oklch(0.916 0.143 117.39);
+  --color-lime-400: oklch(0.894 0.178 118.97);
+  --color-lime-500: oklch(0.872 0.209 120.90);
+  --color-lime-600: oklch(0.740 0.173 120.78);
+  --color-lime-700: oklch(0.608 0.137 120.43);
+  --color-lime-800: oklch(0.476 0.100 119.52);
+  --color-lime-900: oklch(0.343 0.062 117.94);
+  --color-lime-950: oklch(0.278 0.043 116.50);
 
-  --color-bronze: #69580f;
-  --color-bronze-50: #e3ddcf;
-  --color-bronze-100: #d5cdb8;
-  --color-bronze-200: #bbae8d;
-  --color-bronze-300: #a09063;
-  --color-bronze-400: #84733b;
-  --color-bronze-500: #69580f;
-  --color-bronze-600: #564810;
-  --color-bronze-700: #443910;
-  --color-bronze-800: #322a0f;
-  --color-bronze-900: #221c0b;
-  --color-bronze-950: #1a1607;
+  --color-bronze: oklch(0.464 0.089 94.82);
+  --color-bronze-50: oklch(0.898 0.020 87.52);
+  --color-bronze-100: oklch(0.849 0.030 89.59);
+  --color-bronze-200: oklch(0.753 0.048 89.08);
+  --color-bronze-300: oklch(0.656 0.065 90.73);
+  --color-bronze-400: oklch(0.559 0.078 92.84);
+  --color-bronze-500: oklch(0.464 0.089 94.82);
+  --color-bronze-600: oklch(0.405 0.074 94.38);
+  --color-bronze-700: oklch(0.347 0.059 93.92);
+  --color-bronze-800: oklch(0.287 0.044 92.99);
+  --color-bronze-900: oklch(0.229 0.030 90.47);
+  --color-bronze-950: oklch(0.200 0.028 95.07);
 }
 
 @layer base {
